--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portfolio-material",
+  "homepage": "https://sangeethaa-dev.github.io/Portfolio-sangee/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,8 +8,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
+  
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@material/material-color-utilities": "^0.3.0",
@@ -34,10 +37,12 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.0",
+    "vite-plugin-gh-pages": "^1.0.1",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
